# split-inference-grpc-demo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml
client/: client_chain.py
core/: dataset.py  model.py
core/tests/: conftest.py
core/tests/unit/: test_core_logic.py  test_model_architecture.py  test_model_azorian.py  test_optional_advanced.py  test_pipeline_integration.py  test_predict_next_bitrate.py  test_preprocessing_utils.py  test_train.py  test_training_dynamics.py
notebooks/: 01_data_prep.ipynb  bitrate_refactored_colab.ipynb
scripts/: prepare_data.py
service/: server_decode.py  server_prefill.py
service/proto/: bitrate.proto
