[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | core/tests
  | tests
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D"]
ignore = ["D203", "D213", "D407", "D406"]
exclude = ["core/tests", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D", "ANN"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = [
    "core/tests"
]
pythonpath = "."

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
